tcr: Downgrade to Java 11 for long term support